--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,11 @@
 RewriteEngine On
+RewriteCond %{REQUEST_METHOD} =GET
 RewriteCond %{DOCUMENT_ROOT}/cache/$1/$2/$2$3 -f
-RewriteRule ^([a-z]{3})/([^_\.]+)([_\.]?.*)$ %{DOCUMENT_ROOT}/cache/$1/$2/$2$3 [L,E=REWRITE]
+RewriteRule ^([a-z]{3})/([^_\.]+)([_\.]?.*)$ %{DOCUMENT_ROOT}/cache/$1/$2/$2$3 [L,E=REWRITE:1]
 
+RewriteCond %{REQUEST_METHOD} =GET
 RewriteCond %{DOCUMENT_ROOT}/cache/$1/$1$2 -f
-RewriteRule ^([^_\.]+)([_\.]?.*)$ %{DOCUMENT_ROOT}/cache/$1/$1$2 [L,E=REWRITE]
+RewriteRule ^([^_\.]+)([_\.]?.*)$ %{DOCUMENT_ROOT}/cache/$1/$1$2 [L,E=REWRITE:1]
 
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
